Scrollbar fix, added wobbly synth

--- a/src/www/css/song_maker_style.css
+++ b/src/www/css/song_maker_style.css
@@ -1,5 +1,13 @@
 body {
+    overflow: hidden;
+}
+
+#pageContents {
+    position: absolute;
+    top: 7%;
+    height: 93%;
     overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .song-maker-prompt {
@@ -62,18 +70,16 @@ body {
 }
 
 #topBar {
-    position: fixed;
-    top: 0px;
     z-index: 5;
 }
 
 .track-container {
     position: relative;
-    width: 90%;
+    width: 94%;
     height: 350px;
     top: 20%;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 50px;
     animation-name: slide-in-left;
     animation-duration: 750ms;
@@ -173,7 +179,7 @@ body {
 
 .song-title-container {
     position: relative;
-    top: 10%;
+    top: 5%;
     margin-left: auto;
     margin-right: auto;
     color: black;
